--- a/package.json
+++ b/package.json
@@ -12,13 +12,24 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~10.0.5",
+    "@angular/cdk": "^10.1.3",
     "@angular/common": "~10.0.5",
     "@angular/compiler": "~10.0.5",
     "@angular/core": "~10.0.5",
     "@angular/forms": "~10.0.5",
+    "@angular/localize": "~10.0.5",
     "@angular/platform-browser": "~10.0.5",
     "@angular/platform-browser-dynamic": "~10.0.5",
     "@angular/router": "~10.0.5",
+    "@fullcalendar/core": "^5.3.0",
+    "@ng-bootstrap/ng-bootstrap": "^7.0.0",
+    "bootstrap": "^4.5.0",
+    "chart.js": "^2.9.3",
+    "font-awesome": "^4.7.0",
+    "fullcalendar": "^5.3.0",
+    "jquery": "^3.5.1",
+    "primeng": "^10.0.0-rc.3",
+    "quill": "^1.3.7",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
